--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -51,6 +51,7 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
+                  docker-required: true
 
             - name: Run Metadata
               uses: ./.github/actions/metadataRunner
