--- a/.github/workflows/standalone-test-pushdown.yml
+++ b/.github/workflows/standalone-test-pushdown.yml
@@ -51,6 +51,7 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
+                  docker-required: true
 
             - if: runner.os == 'Windows'
               name: Set JAVA_OPTS
