--- a/conf/config.properties
+++ b/conf/config.properties
@@ -225,6 +225,11 @@ pythonCMD=python3
 # 是否初始化配置文件内指定的UDF/Transform
 needInitBasicUDFFunctions=false
 
+# 使用conda时，取消以下两行的注释。condaCMD是conda可执行文件的路径，condaEnv是需要的虚拟环境名
+# 配置conda之后，pythonCMD不再有效
+#condaCMD=your/path/to/conda
+#condaEnv=yourEnv
+
 ##########################
 ### Transform配置
 ##########################
