--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -17,7 +17,7 @@ on:
                 description: "The operating system to run the test on"
                 type: string
                 required: false
-                default: '["ubuntu-latest, large"]'
+                default: '["ubuntu-latest"]'
             #                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
             metadata-matrix:
                 description: "The metadata to run the test on"
@@ -49,6 +49,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         env:
             METADATA_STORAGE: ${{ matrix.metadata }}
+            GOMAXPROCS: 8
         steps:
             - uses: actions/checkout@v4
             - name: Environment dependence
@@ -57,6 +58,13 @@ jobs:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
                   docker-required: true
+
+            - name: Set GOMAXPROCS to 8
+              run: |
+                echo "export GOMAXPROCS=8" >> $GITHUB_PATH
+                source $GITHUB_PATH
+              env:
+                GOMAXPROCS: 8
 
             - name: Run Metadata
               uses: ./.github/actions/metadataRunner
