--- a/.github/actions/service/vectordb/action.yml
+++ b/.github/actions/service/vectordb/action.yml
@@ -50,7 +50,7 @@ runs:
               done
               sleep 5
               for port in ${{ inputs.ports }}; do
-                if lsof -i :$port | grep -q LISTEN; then
+                if netstat -an | grep -q ".*:$port.*LISTEN"; then
                   echo "Port $port is open."
                 else
                   echo "Port $port is not open."
