--- a/dataSource/vectordb/pom.xml
+++ b/dataSource/vectordb/pom.xml
@@ -30,7 +30,7 @@
     </parent>
 
     <artifactId>vectordb</artifactId>
-    <name>IGinX Milvus</name>
+    <name>IGinX VectorDB</name>
 
     <properties>
         <gson.version>2.10.1</gson.version>
