--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -31,6 +31,11 @@ jobs:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
+    db-ce-no-optimizer:
+        uses: ./.github/workflows/DB-CE-no-optimizer.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+
     remote-test:
         uses: ./.github/workflows/remote-test.yml
         with:
