--- a/.github/actions/service/vectordb/action.yml
+++ b/.github/actions/service/vectordb/action.yml
@@ -26,7 +26,7 @@ runs:
         - name: Setup docker compose
           uses: ./.github/actions/docker-compose
 
-        - if: fromJSON(inputs.start) && runner.os == 'Windows'
+        - if: fromJSON(inputs.start)
           name: Create Config for milvus docker compose on Windows
           shell: bash
           working-directory: ${{ github.workspace }}
@@ -41,38 +41,6 @@ runs:
                 sed -i"" -e "s/name: milvus/name: milvus$port/g" $port/docker-compose-$port.yml
               done
               echo "docker-compose.yml created successfully"
-
-        - if: fromJSON(inputs.start) && runner.os == 'Linux'
-          name: Create Config for milvus docker compose on Linux
-          shell: bash
-          working-directory: ${{ github.workspace }}
-          run: |
-              pwd
-              echo ${{ github.workspace }}
-              for port in ${{ inputs.ports }}; do
-                mkdir -p $port
-                cp -f docker/milvus/docker-compose.yml $port/docker-compose-$port.yml
-                sed -i"" -e "s/19530:19530/$port:19530/g" $port/docker-compose-$port.yml
-                sed -i"" -e "s/\/volumes/\/volumes$port/g" $port/docker-compose-$port.yml
-                sed -i"" -e "s/name: milvus/name: milvus$port/g" $port/docker-compose-$port.yml
-              done
-              echo "docker-compose.yml created successfully"
-
-        - if: fromJSON(inputs.start) && runner.os == 'macOS'
-          name: Create Config for milvus docker compose on macOS
-          shell: bash
-          working-directory: ${{ github.workspace }}
-          run: |
-            pwd
-            echo ${{ github.workspace }}
-            for port in ${{ inputs.ports }}; do
-              mkdir -p $port
-              cp -f docker/milvus/docker-compose-mac.yml $port/docker-compose-$port.yml
-              sed -i"" -e "s/19530:19530/$port:19530/g" $port/docker-compose-$port.yml
-              sed -i"" -e "s/\/volumes/\/volumes$port/g" $port/docker-compose-$port.yml
-              sed -i"" -e "s/name: milvus/name: milvus$port/g" $port/docker-compose-$port.yml
-            done
-            echo "docker-compose.yml created successfully"
 
         - if: fromJSON(inputs.start) && runner.os != 'Windows'
           name: Start milvus
