--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -185,6 +185,13 @@ runs:
               paths: conf/config.properties
               statements: s/^#storageEngineList=127.0.0.1#19530/storageEngineList=127.0.0.1#19530/g
 
+        - if: inputs.DB-name=='VectorDB'
+          name: Modify IGinX Config
+          uses: ./.github/actions/edit
+          with:
+            paths: conf/config.properties
+            statements: s/^#storageEngineList=192.168.106.2#19530/storageEngineList=192.168.106.2#19530/g
+
         - if: inputs.DB-name=='FileSystem'
           name: Run DB
           shell: bash
