--- a/.github/actions/service/vectordb/action.yml
+++ b/.github/actions/service/vectordb/action.yml
@@ -106,9 +106,14 @@ runs:
               sed -i"" -e "s/127.0.0.1#19530/${MILVUS_HOST}#19530/g" conf/config.properties
 
         - if: runner.os == 'Windows'
-          name: Set up JDK
-          uses: actions/setup-java@v4
-          with:
-              java-version: "8"
-              distribution: "liberica"
-              cache: "maven"
+          name: Set JAVA_HOME
+          shell: wsl-run {0}
+          run: |
+            sudo apt update
+            sudo apt install openjdk-8-jdk -y
+            echo "export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64" >> $HOME/.bashrc
+            echo "export PATH=\$PATH:\$JAVA_HOME/bin" >> $HOME/.bashrc
+            source $HOME/.bashrc
+            java -version
+            echo $JAVA_HOME
+            
